workshop03/config-setup.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
