workshop03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: codeserver
spec:
  ingressClassName: nginx
  rules:
  - host: code-144.126.240.77.nip.io  # Replace <IP> with node's IP address or dynamic DNS
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server-svc
            port:
              number: 8080
